# KeyDance

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
src/: acrcloud_api.rs  api.rs  audio.rs  magenta.rs  main.rs  models.rs  recognition.rs  staff_notation.rs
static/: app.ts  index.html  styles.css  tsconfig.json
