[package]
name = "key-dance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
actix-files = "0.6.2"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.12.14", features = ["json"] }
base64 = "0.22.1"
rustls = "0.23.24"
rustls-pemfile = "2.2.0"

[build-dependencies]
fs_extra = "1.3.0"
