[package]
name = "key_dance_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.7.1"
actix-files = "0.6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12.14", features = ["multipart", "json"] }

# Cryptography
base64 = "0.22.1"
hmac = "0.12.1"
sha1 = "0.10.5"

# Logging
log = "0.4"
env_logger = "0.11.7"

# Configuration
dotenv = "0.15"
